Add Google Search Console verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Pawgrammer, AI coding, no-code, app builder, website builder, automation, non-technical coding" />
     <meta name="author" content="Pawgrammer" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="-vA6C23tnTqRGg57_eDxavyMSXzgY7gtpz-cj_VFqUk" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
