--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="-vA6C23tnTqRGg57_eDxavyMSXzgY7gtpz-cj_VFqUk" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FD2MSD5C9C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FD2MSD5C9C');
+    </script>
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pawgrammer.com/" />
