Update Google Analytics tracking ID to G-KTZ6EBRWC2

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <meta name="google-site-verification" content="-vA6C23tnTqRGg57_eDxavyMSXzgY7gtpz-cj_VFqUk" />
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FD2MSD5C9C"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KTZ6EBRWC2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-FD2MSD5C9C');
+      gtag('config', 'G-KTZ6EBRWC2');
     </script>
     
     <!-- Open Graph / Facebook -->
