Update Discord community avatars and favicon branding
- Replace stacyicon.png with royaldependent.png in community section
- Add liquid glass borders to Discord community avatars
- Update favicon, logo192, logo512 to use pawgrammericonnew.png
- Enhance dark mode border contrast for avatar liquid glass effects
- Add PNG favicon links for better browser support
- Update structured data logo reference

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
     <link rel="canonical" href="https://pawgrammer.com/" />
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/pawgrammericonnew.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/pawgrammericonnew.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Structured Data -->
@@ -50,7 +52,7 @@
       "@type": "Organization",
       "name": "Pawgrammer",
       "url": "https://pawgrammer.com",
-      "logo": "https://pawgrammer.com/logo.png",
+      "logo": "https://pawgrammer.com/pawgrammericonnew.png",
       "description": "AI-powered coding tools and no-code solutions for non-technical users",
       "foundingDate": "2024",
       "sameAs": [
